--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
         "large":"./assets/images/large.jpg",
         "small":"./assets/images/small.jpg"
     },
-    "version": "0.2.0",
+    "version": "0.3.0",
     "compatibility": "0.x || 1.x",
     "author": {
             "name": "Jeroen Somhorst",
@@ -160,6 +160,13 @@
             ]        
         }],
         "actions":[
+            {
+                "id":"anwb_check_traffic_size",
+                "title": {
+                    "en":"Traffic summary",
+                    "nl":"File overzicht (totaal)"
+                }
+            },
             {
                 "id": "anwb_tell_various",
                 "title":{
