Added extra conditions to be used.
Added extra conditions:
- Check if there are road works going on
- Check if there are radar controles

--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
         "large":"./assets/images/large.jpg",
         "small":"./assets/images/small.jpg"
     },
-    "version": "0.4.1",
+    "version": "0.4.2",
     "compatibility": "0.x || 1.x",
     "author": {
             "name": "Jeroen Somhorst",
@@ -26,6 +26,28 @@
     "flow":{
         "triggers":[],
         "conditions":[{
+            "id": "awnb_check_roadworks",
+            "title": {
+                "en": "There are !{{roadworks |no roadworks}} ",
+                "nl": "er zijn !{{|geen}} werkzaamheden"
+            },
+            "args":[{
+                "name": "road",
+                "type": "autocomplete"
+            }]
+        },
+        {
+            "id": "awnb_check_policechecks",
+            "title": {
+                "en": "There !{{are|aren't}} no police controles",
+                "nl": "Er zijn !{{ |geen}} politie controles"
+            },
+            "args":[{
+                "name": "road",
+                "type": "autocomplete"
+            }]
+        },        
+        {
             "id": "anwb_check_traffic",
             "title":{
                 "en": "There !{{is|isn't}} a traffic jam",
@@ -33,129 +55,7 @@
             },
             "args": [{
                         "name": "road",
-                        "type": "dropdown",
-                        "values": [
-                        {
-                            "id": "",
-                            "label": {"en":"","nl":""}
-                        },
-                        {
-                        "id": "A1",
-                        "label": {"en":"A1"}
-                        },
-                        {
-                        "id": "A2",
-                        "label": {"en":"A2"}
-                        },
-                        {
-                        "id": "A4",
-                        "label": {"en":"A4"}
-                        },
-                        {
-                        "id": "A5",
-                        "label": {"en":"A5"}
-                        },{
-                        "id": "A6",
-                        "label": {"en":"A6"}
-                        },{
-                        "id": "A7",
-                        "label": {"en":"A7"}
-                        },{
-                        "id": "A8",
-                        "label": {"en":"A8"}
-                        },{
-                        "id": "A9",
-                        "label": {"en":"A9"}
-                        },{
-                        "id": "A10",
-                        "label": {"en":"A10"}
-                        },{
-                        "id": "A12",
-                        "label": {"en":"A12"}
-                        },{
-                        "id": "A13",
-                        "label": {"en":"A13"}
-                        },{
-                        "id": "A15",
-                        "label": {"en":"A15"}
-                        },{
-                        "id": "A16",
-                        "label": {"en":"A16"}
-                        },{
-                        "id": "A17",
-                        "label": {"en":"A17"}
-                        },{
-                        "id": "A18",
-                        "label": {"en":"A18"}
-                        },{
-                        "id": "A20",
-                        "label": {"en":"A20"}
-                        },
-                        {
-                        "id": "A22",
-                        "label": {"en":"A22"}
-                        },{
-                        "id": "A27",
-                        "label": {"en":"A27"}
-                        },{
-                        "id": "A28",
-                        "label": {"en":"A28"}
-                        },{
-                        "id": "A29",
-                        "label": {"en":"A29"}
-                        },{
-                        "id": "A30",
-                        "label": {"en":"A30"}
-                        },{
-                        "id": "A31",
-                        "label": {"en":"A30 (N31)"}
-                        },{
-                        "id": "A32",
-                        "label": {"en":"A32"}
-                        },{
-                        "id": "A35",
-                        "label": {"en":"A35 (N35)"}
-                        },{
-                        "id": "A37",
-                        "label": {"en":"A37"}
-                        },{
-                        "id": "A38",
-                        "label": {"en":"A38"}
-                        },{
-                        "id": "A44",
-                        "label": {"en":"A44 (N44)"}
-                        },{
-                        "id": "A50",
-                        "label": {"en":"A50"}
-                        },{
-                        "id": "A58",
-                        "label": {"en":"A58 (N58)"}
-                        },{
-                        "id": "A59",
-                        "label": {"en":"A59 (N59)"}
-                        },{
-                        "id": "A65",
-                        "label": {"en":"A65 (N65)"}
-                        },{
-                        "id": "A67",
-                        "label": {"en":"A67"}
-                        },{
-                        "id": "A73",
-                        "label": {"en":"A73"}
-                        },{
-                        "id": "A76",
-                        "label": {"en":"A76"}
-                        },{
-                        "id": "A77",
-                        "label": {"en":"A77"}
-                        },{
-                        "id": "A79",
-                        "label": {"en":"A79"}
-                        },{
-                        "id": "A200",
-                        "label": {"en":"A200 (N200)"}
-                        }
-                    ]
+                        "type": "autocomplete"
                     }
             ]        
         }],
