--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
         "large":"./assets/images/large.jpg",
         "small":"./assets/images/small.jpg"
     },
-    "version": "0.4.2",
+    "version": "0.4.3",
     "compatibility": "0.x || 1.x",
     "author": {
             "name": "Jeroen Somhorst",
@@ -39,7 +39,7 @@
         {
             "id": "awnb_check_policechecks",
             "title": {
-                "en": "There !{{are|aren't}} no police controles",
+                "en": "There !{{are|aren't}} police controles",
                 "nl": "Er zijn !{{ |geen}} politie controles"
             },
             "args":[{
